# CCAM-Earth-Init

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Readme.md  earth.cpp  earth.h  fixme.py  main.cpp
0_kitchen_sink/: CMakeLists.txt  main.cpp
headergen/: __main__.py
json/: CMakeLists.txt  earth.json  estruary.json
